--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
 <!--RODAPÉ-->
 <footer class="text-center bg-black text-bg-dark">
-  <p class="card-text py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por Alura | Projeto fictício sem fins comerciais.</p>
+  <p class="card-text py-3">2023 <i class="bi bi-c-circle"></i> Desenvolvido por João Vitor Borges | Projeto fictício sem fins comerciais.</p>
 </footer>
 
 
